fix: removed gap

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -3100,6 +3100,11 @@
       justify-content: center;
     }
   }
+  .xl\:gap-0 {
+    @media (width >= 80rem) {
+      gap: calc(var(--spacing) * 0);
+    }
+  }
   .xl\:gap-4 {
     @media (width >= 80rem) {
       gap: calc(var(--spacing) * 4);
